namespace Utils.String
{
    public class StringManager 
    {
        public static readonly string BoardPool = "Board";
        public static readonly string VFXPool = "VFX";
        public static readonly string RowPrefab = "Row";
        public static readonly string TilePrefab = "Tile";
        public static readonly string DestroyPrefab = "Flash_star_ellow_green";
        public static readonly string isWalking = "isWalking";
        public static readonly string isInteracting = "isInteracting";
        public static readonly string moveX = "moveX";
        public static readonly string moveY = "moveY";
        public static readonly string lastMoveX = "lastMoveX";
        public static readonly string lastMoveY = "lastMoveY";
    }
}
